# schwab-quantower-project

./: .gitignore  README.md
schwab-equities-workstation/: .env.example  .gitignore  README.md  Start_Schwab_Backend.bat
schwab-equities-workstation/backend/: init_schwab_session.py  pyproject.toml
schwab-equities-workstation/backend/app/: __init__.py  config.py  main.py  models.py
schwab-equities-workstation/backend/app/routes/: auth.py  broker.py  market.py  stream.py
schwab-equities-workstation/backend/app/services/: analysis.py  auth.py  broker.py  schwab.py  stream.py  symbols.py
schwab-equities-workstation/frontend/: index.html  package-lock.json  package.json
schwab-equities-workstation/frontend/src/: App.tsx  styles.css
schwab-quantower-bridge/: .gitignore  LINKEDIN_PROJECT_SUMMARY.md  PRIVATE_REPO_PUBLISHING_PLAN.md  QUANTOWER_SCHWAB_UPGRADES_REVIEW.md  README.md  SCOPE_FREEZE_AND_TEST_MATRIX.md
schwab-quantower-bridge/src/: schwab_analysis.txt
schwab-quantower-bridge/src/SchwabQuantowerBridge/: BridgeSettings.cs  Class1.cs  DEPLOYMENT.md  SchwabQuantowerBridge.csproj  SchwabQuantowerBridge.sln
schwab-quantower-bridge/src/SchwabQuantowerBridge/Models/: BarDto.cs  BridgeStreamStatusDto.cs  BrokerAccountDto.cs  BrokerExecutionDto.cs  BrokerOrderDto.cs  BrokerOrderResultDto.cs  BrokerPositionDto.cs  BrokerTradeDto.cs  MarketSnapshotDto.cs  ModifyBrokerOrderRequestDto.cs  OptionChainDto.cs  OptionContractDto.cs  OptionSeriesDto.cs  SymbolProfileDto.cs
schwab-quantower-bridge/src/SchwabQuantowerBridge/Quantower/: QuantowerBridgeConstants.cs  (+2 more)
(+1 files in other folders)
